// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alias transaction service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "alias": "wykop.pl",
    "fee": "0.001",
    "height": 922106,
    "id": "21BmkGpk98wWHrCydjwTFvHWPfQxtH5NEQd9X7wUpi5R",
    "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
    "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
    "signature": "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
    "timestamp": 2018-03-17T20:22:43.000Z,
    "type": 10,
    "version": 1,
  },
}
`;

exports[`Alias transaction service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "alias": "wykop.pl",
        "fee": "0.001",
        "height": 922106,
        "id": "21BmkGpk98wWHrCydjwTFvHWPfQxtH5NEQd9X7wUpi5R",
        "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
        "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
        "signature": "54qNaDCCC3LoprhNcd6C4ytRbB2chDpYxEusmyVgmPg7PNQjvi7Ckc13mBn1M3zf8T5YgzfWDMnvE9rRLYyGSkSu",
        "timestamp": 2018-03-17T20:22:43.000Z,
        "type": 10,
        "version": 1,
      },
    },
    null,
    Object {
      "__type": "transaction",
      "data": Object {
        "alias": "wykop",
        "fee": "0.001",
        "height": 922106,
        "id": "HbgSfoQ7ftAF3TUQNovbFnohsRK7AdztFznrJHTqH7F7",
        "sender": "3P2DQSKgE7Hw9VhHfu5TkJxsh5GFRfShQpK",
        "senderPublicKey": "FTY2T2HLvyR7XQTvn5Eu56B8qGXcvosutTRq5TatcTMp",
        "signature": "4oA22v2NsNNJafLJVEqwSJF74XvN1pxh9d72k2pe8kheMjrTf8E4exLUGAoGKKrZYcw9UzxVgFoeNNBQjcqRajHW",
        "timestamp": 2018-03-17T20:22:39.000Z,
        "type": 10,
        "version": 1,
      },
    },
  ],
}
`;
